# pycyseq

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml  zensical.toml
.github/workflows/: docs.yml
docs/: 01_installation.md  02_mapping.md  03_fragmentomics.md  04_downstream_analysis.md  99_license.md  index.md
docs/API/: 01_io.md  02_alignment.md  03_alignmentgroup.md  04_doublestrand.md  05_singlestrand.md  index.md
pycyseq/: __init__.py  alignment.py  alignment_group.py  double_strand.py  io.py  single_strand.py
tests/: test_double_strand.py
